Corrected the progress div alignment

--- a/ilearn/src/ProgressBar.css
+++ b/ilearn/src/ProgressBar.css
@@ -44,7 +44,7 @@
     width: 90%;
     background-color: var(--dark-mode-icon-color);
     border-radius: 20px 20px;
-    padding-left: 7px;
+    /* padding-left: 7px; */
 }
 
 .recent {
